Operation: UpdateLaboratory, AddLaboratoryUsers, RemoveLaboratoryUsers
